# lbl-inveniordm

./: .gitignore  .invenio  .npmrc  Dockerfile  Dockerfile.k8s  Pipfile  build_output.txt  deployment.yaml  docker-compose.full.yml  docker-compose.yml  docker-compose.yml.old  docker-services.yml  docker-services.yml.old  generate-certs.sh  invenio.cfg  proposed_secure_invenio.sh  run_invenio.sh  run_service_containers.sh  security_plan.md  shift_plan.md
assets/less/: theme.less
assets/less/site/globals/: site.overrides  site.variables
assets/scss/invenio_app_rdm/: theme.scss
docker/nginx/: Dockerfile  nginx.conf  test.crt  test.key
docker/nginx/conf.d/: default.conf.old
docker/pgadmin/: servers.json
fix_docs/: fix_startup_script.md  prompt_plan.md  simple_startup_fix.md
plans/: DEPLOYMENT.md  README.md  deployment_plan.md  docker_to_kube_changes.md  helm_plan.md  kubernetes_considerations.md  kubernetes_helm_refactor.md  nginx_container_loop.md  nginx_search_fix.md  prompt_plan.md  security_plan.md  ssl_fix.md  stop_start.md  stop_start_execution_prompts.md  stop_start_prompts.md  todo.md
site/: .gitkeep  MANIFEST.in  README.md  setup.cfg  setup.py
site/lbnl_data_repository/: __init__.py  views.py  webpack.py
site/lbnl_data_repository/templates/lbnl_data_repository/: faq.html  news.html  terms.html
static/css/: custom.css
templates/semantic-ui/invenio_app_rdm/: footer.html  footer.suspect  frontpage.html  page.html.bak
