
[metadata]
name = lbnl-data-repository

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    lbnl_data_repository_views = lbnl_data_repository.views:create_blueprint
invenio_assets.webpack =
    lbnl_data_repository_theme = lbnl_data_repository.webpack:theme
