[metadata]
name = lbnl-data-repository
version = 0.1.0
description = LBNL Data Repository customizations for InvenioRDM
long_description = file: README.md

[options]
python_requires = >=3.9
packages = find
include_package_data = True
install_requires =
    invenio-app-rdm>=12.0.0

[options.entry_points]
invenio_base.blueprints =
    lbnl_pages = lbnl_data_repository.views:create_blueprint
invenio_assets.webpack =
    lbnl_data_repository_theme = lbnl_data_repository.webpack:theme

